[package]
name = "or-tools"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

build = "build.rs"

include = ["build.rs", "src/**/*.rs", "Cargo.toml", "LICENSE"]

[package.metadata.docs.rs]
features = [
    "build-native", # otherwise the build will fail in docs.rs
    "solver-all",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["solver-all"]

# Google Or-Tools Builder
build-native = ["or-tools-sys"]

# Solvers
solver-all = [
    "solver-cbc",
    "solver-clp",
    "solver-cp-sat",
    "solver-glop",
    "solver-pdlp",
    "solver-scip",
]
solver-all-nonfree = [
    "solver-cplex",
    "solver-glpk",
    "solver-highs",
    "solver-xpress",
]
solver-cbc = ["or-tools-sys?/solver-coinor"]
solver-clp = ["or-tools-sys?/solver-coinor"]
solver-cp-sat = []
solver-cplex = ["or-tools-sys?/solver-cplex"]
solver-glop = []
solver-glpk = ["or-tools-sys?/solver-glpk"]
solver-highs = ["or-tools-sys?/solver-highs"]
solver-pdlp = []
solver-scip = ["or-tools-sys?/solver-scip"]
solver-xpress = ["or-tools-sys?/solver-xpress"]

[build-dependencies]
cpp_build = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }

[dependencies]
or-tools-sys = { path = "./sys", version = "9.7.0", optional = true }

cpp = { workspace = true }
libffi = { workspace = true }

#################
#   Workspace   #
#################

[workspace]
members = [".", "./sys"]
resolver = "2"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Unofficial Rust wrappers to the C++ library Google OR-Tools, open source software for combinatorial optimization"
documentation = "https://docs.rs/or-tools"
edition = "2021"
keywords = ["csp", "linear-solver", "optimization", "or-tools", "sat"]
license = "Apache-2.0"
readme = "./README.md"
rust-version = "1.73"
homepage = "https://github.com/ulagbulag/or-tools-rs"
repository = "https://github.com/ulagbulag/or-tools-rs"
version = "0.1.0"

[workspace.dependencies]
cmake = { version = "0.1" }
cpp = { version = "0.5" }
cpp_build = { version = "0.5" }
git2 = { version = "0.18", default-features = false, features = ["https"] }
itertools = { version = "0.11" }
libffi = { version = "3.2", features = ["system"] }
