[package]
name = "or-tools-sys"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# [OR-Tools-Major].[OR-Tools-Minor].[sys-patch]
version = "9.9.0"

build = "build.rs"
links = "ortools"

include = ["build.rs", "src/**/*.rs", "Cargo.toml", "LICENSE"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Builder
build-force = []

# Solvers
solver-coinor = []
solver-cplex = []
solver-glpk = []
solver-highs = []
solver-scip = []
solver-xpress = []

[build-dependencies]
cmake = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ureq = { workspace = true }

[dependencies]
